# prompt-security

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: 1_dataset_preproccessing.ipynb  2_generate_adverserial_suffix_dataset.ipynb  3_paraphrase_attack_generation.ipynb  5_perplexity_classifer.ipynb  6_embedding_classifer.ipynb  7_nlp_classical_classifier.ipynb  8_nlp_modern_classifier.ipynb  dataset_preproccessing.ipynb  detecting_language_model_attack_with_perplexity.ipynb  ga.ipynb  generate_adverserial_suffix_dataset.ipynb
prompt_security/: generate_paraphrase.py
prompt_security.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
prompt_security/evaluators/: embedding_evaluator.py  gpt2_perplexity.py  llm_evaluator.py  mini_llm_perplexity.py  protectai.py  roberta_evaluator.py  sqli_evaluator.py  utils.py
prompt_security/mutators/: base.py  llm_mutator.py  noop_mutator.py  openai_mutator.py  randomwords_mutator.py  typo_mutator.py
prompt_security/pipelines/: base.py
prompt_security/utils/: common.py  constants.py
reports/boolq/: data.ndjson  grid.json
reports/docRED/: data.ndjson  grid.json
reports/platypus/: grid.json
reports/puffin/puffin/: data.ndjson  grid.json
reports/super_glue_squad/: grid.json
